--- a/backend/.env
+++ b/backend/.env
@@ -8,6 +8,7 @@ DB_PORT=5432
 DB_NAME=wallpaper_db
 DB_USER=postgres
 DB_PASSWORD=123456
+DB_DIALECT=postgres
 
 # JWT
 JWT_SECRET=your_very_long_secret_key
