--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.62.3",
     "axios": "^1.7.9",
+    "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.0.2",
+    "shadcn-ui": "^0.9.3",
     "yup": "^1.5.0"
   },
   "devDependencies": {
