--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.0.2",
     "shadcn-ui": "^0.9.3",
+    "uuid": "^11.0.3",
     "yup": "^1.5.0"
   },
   "devDependencies": {
