--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^7.0.2",
     "shadcn-ui": "^0.9.3",
     "uuid": "^11.0.3",
+    "uuidv4": "^6.2.13",
     "yup": "^1.5.0"
   },
   "devDependencies": {
